openshift/overlays/production/jhipster-registry-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
  labels:
    com.xebialabs.service: jhipster-registry
  name: jhipster-registry
spec:
  host: jhipster-registry.openshift-training.io
