openshift/overlays/production/jhipster-zipkin-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
  labels:
    com.xebialabs.service: jhipster-zipkin
  name: jhipster-zipkin
spec:
  host: jhipster-zipkin.openshift-training.io
