openshift/overlays/production/store-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
  labels:
    com.xebialabs.service: store-app
  name: store-app
spec:
  host: store-app.openshift-training.io
